# infinipaint

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md  conanfile.py
.github/: FUNDING.yml
android-project/: .gitignore
android-project/app/: build.gradle  proguard-rules.pro
assets/data/: license
assets/data/config/: default_p2p.json
assets/data/third_party_licenses/: clay  libjpeg-turbo  openssl  (+4 more)
conan/: conan_skia_command.sh  export_libs.bat  export_libs.sh  icu-data-filters.json  linux_runtime_deploy.py
conan/libdatachannel/: config.yml
conan/libjuice/: config.yml
conan/profiles/: android  emscripten  linux-x86_64  macOS-arm64
conan/sdl3/: config.yml
data/config/: p2p.json
data/third_party_licenses/: vulkan-headers
docs/: BUILDING.md  MANUAL.md  pull_request_template.md
emscripteninstall/: index.html  singlefilereleaseshell.html
include/: glad.c
include/EmscriptenHelpers/: emscripten_browser_clipboard.h  emscripten_browser_file.h
include/Helpers/: BezierEasing.cpp  BezierEasing.hpp  CallbackManager.hpp  ConvertVec.hpp  FileDownloader.cpp  FileDownloader.hpp  FileDownloaderEmscripten.cpp  FixedPoint.hpp  Hashes.cpp  Hashes.hpp  HsvRgb.hpp  Logger.cpp  Logger.hpp  MathExtras.hpp  Parallel.hpp  Random.cpp  Random.hpp  SCollision.hpp  Serializers.cpp  Serializers.hpp  StringHelpers.cpp  StringHelpers.hpp  VersionNumber.cpp  VersionNumber.hpp
include/glad/: gl.h  gl2_1.h  gl3_3.h  glad.h  gles2.h  gles3_0.h
linuxinstall/: com.erroratline0.infinipaint.desktop  com.erroratline0.infinipaint.metainfo.xml  com.erroratline0.infinipaint.xml  com.erroratline0.infinipaint.yml  com.infinipaint.infinipaint.desktop  com.infinipaint.infinipaint.metainfo.xml  com.infinipaint.infinipaint.xml  com.infinipaint.infinipaint.yml
macosinstall/: Info.plist  appicon.icns
src/: AndroidJNICalls.cpp  AndroidJNICalls.hpp  BookmarkManager.cpp  BookmarkManager.hpp  CanvasTheme.cpp  CanvasTheme.hpp  ClientData.cpp  ClientData.hpp  CollabList.hpp  CommandList.hpp  ConnectionManager.cpp  ConnectionManager.hpp  CoordSpaceHelper.cpp  CoordSpaceHelper.hpp  CoordSpaceHelperTransform.cpp  CoordSpaceHelperTransform.hpp  CustomEvents.cpp  CustomEvents.hpp  DrawCamera.cpp  DrawCamera.hpp  DrawCollision.cpp  DrawCollision.hpp  DrawData.cpp  DrawData.hpp  EarcutIncludes.hpp  FileHelpers.cpp  FileHelpers.hpp  FontData.cpp  FontData.hpp  GUIHolder.cpp  GUIHolder.hpp  GlobalConfig.cpp  GlobalConfig.hpp  GridManager.cpp  GridManager.hpp  InputManager.cpp  InputManager.hpp  MainProgram.cpp  MainProgram.hpp  NetThreadManager.cpp  (+27 more)
src/Bookmarks/: BookmarkListItem.cpp  BookmarkListItem.hpp  BookmarkManager.cpp  BookmarkManager.hpp
src/CanvasComponents/: BrushComponentCode.cpp  BrushComponentCode.hpp  BrushStrokeCanvasComponent.cpp  BrushStrokeCanvasComponent.hpp  CanvasComponent.cpp  CanvasComponent.hpp  CanvasComponentAllocator.cpp  CanvasComponentAllocator.hpp  CanvasComponentBrushStroke.hpp  CanvasComponentContainer.cpp  CanvasComponentContainer.hpp  CanvasComponentType.hpp  EllipseCanvasComponent.cpp  EllipseCanvasComponent.hpp  ImageCanvasComponent.cpp  ImageCanvasComponent.hpp  MeshCanvasComponent.cpp  MeshCanvasComponent.hpp  RectangleCanvasComponent.cpp  RectangleCanvasComponent.hpp  TextBoxCanvasComponent.cpp  TextBoxCanvasComponent.hpp
src/CollabTextBox/: CollabTextBox.cpp  CollabTextBox.hpp  CollabTextBoxCursor.hpp  CollabTextBoxShaper.cpp  CollabTextBoxShaper.hpp
src/DrawComponents/: DrawBrushStroke.cpp  DrawBrushStroke.hpp  DrawComponent.cpp  DrawComponent.hpp  DrawEllipse.cpp  DrawEllipse.hpp  DrawImage.cpp  DrawImage.hpp  DrawRectangle.cpp  DrawRectangle.hpp  DrawTextBox.cpp  DrawTextBox.hpp
src/DrawingProgram/: BrushTool.cpp  BrushTool.hpp  DrawingProgram.cpp  DrawingProgram.hpp  DrawingProgramCache.cpp  DrawingProgramCache.hpp  DrawingProgramCacheNew.cpp  DrawingProgramCacheNew.hpp  DrawingProgramEditToolBase.cpp  DrawingProgramEditToolBase.hpp  DrawingProgramSelection.cpp  DrawingProgramSelection.hpp  DrawingProgramToolBase.cpp  DrawingProgramToolBase.hpp  EditCanvasComponentWorldUndoAction.cpp  EditCanvasComponentWorldUndoAction.hpp  EditTool.cpp  EditTool.hpp  EllipseDrawEditTool.cpp  EllipseDrawEditTool.hpp  EllipseDrawTool.cpp  EllipseDrawTool.hpp  EraserTool.cpp  EraserTool.hpp  EyeDropperTool.cpp  EyeDropperTool.hpp  GridModifyTool.cpp  GridModifyTool.hpp  ImageEditTool.cpp  ImageEditTool.hpp  ImageTool.cpp  ImageTool.hpp  InkDropperTool.cpp  InkDropperTool.hpp  LassoSelectTool.cpp  LassoSelectTool.hpp  PanCanvasTool.cpp  PanCanvasTool.hpp  RectDrawEditTool.cpp  RectDrawEditTool.hpp  (+14 more)
src/GUIStuff/: ClayImplement.cpp  GUIFloatAnimation.cpp  GUIFloatAnimation.hpp  GUIManager.cpp  GUIManager.hpp  GUIManagerID.cpp  GUIManagerID.hpp
src/ResourceDisplay/: FileResourceDisplay.cpp  FileResourceDisplay.hpp  ImageResourceDisplay.cpp  ImageResourceDisplay.hpp  ResourceDisplay.cpp  ResourceDisplay.hpp  SvgResourceDisplay.cpp  SvgResourceDisplay.hpp
src/RichText/: ParagraphStyleData.cpp  ParagraphStyleData.hpp  TextBox.cpp  TextBox.hpp  TextStyleModifier.cpp  TextStyleModifier.hpp
src/RichTextBox/: RichTextBox.cpp  RichTextBox.hpp  TextStyleModifier.cpp  TextStyleModifier.hpp
src/Screens/: DesktopDrawingProgramScreen.cpp  DesktopDrawingProgramScreen.hpp  DrawingProgramScreen.cpp  DrawingProgramScreen.hpp  FileSelectScreen.cpp  FileSelectScreen.hpp  PhoneDrawingProgramScreen.cpp  PhoneDrawingProgramScreen.hpp  Screen.cpp  Screen.hpp
src/Server/: CMakeLists.txt  ClientData.cpp  ClientData.hpp  CommandList.hpp  MainServer.cpp  MainServer.hpp  ServerData.cpp  ServerData.hpp  servermain.cpp
src/VulkanContext/: GraphiteNativeVulkanWindowContext.cpp  GraphiteNativeVulkanWindowContext.h  GraphiteToolUtils.cpp  GraphiteToolUtils.h  VkTestMemoryAllocator.cpp  VkTestMemoryAllocator.h  VkTestUtils.cpp  VkTestUtils.h  VulkanWindowContext.cpp  VulkanWindowContext.h  WindowContext.cpp  WindowContext.h
src/WindowsFontData/: CustomFontSetManager.cpp  CustomFontSetManager.h  DXHelper.h  stdafx.h
windowsinstall/: infinipaint.manifest  steamwebrtc.cmake
(+191 files in other folders)
